--- a/CSS/estilos/estilo05.css
+++ b/CSS/estilos/estilo05.css
@@ -10,3 +10,15 @@
 #sombraTexto{
     text-shadow: 2px 2px 10px red;
 }
+
+#gradienteLinear{
+    margin: 10px;
+    padding: 10px;
+    height: 100px;
+    width: 100px;
+    background: linear-gradient(to right,orangered,blueviolet,blue); /*linear = tipo de gradiente // to right = direcao // cores inicial e final*/
+    /*background: linear-gradient(to top,orangered,blueviolet,blue); /*linear = tipo de gradiente // to right = direcao // cores inicial e final*/
+    /*background: linear-gradient(to bottom,orangered,blueviolet,blue); /*linear = tipo de gradiente // to right = direcao // cores inicial e final*/
+    /*background: linear-gradient(to left,orangered,blueviolet,blue); /*linear = tipo de gradiente // to right = direcao // cores inicial e final*/
+    border-radius: 80px 20px 80px 90px;
+}
