--- a/CSS/estilos/estilo06.css
+++ b/CSS/estilos/estilo06.css
@@ -1,40 +1,66 @@
-
 body{
-    background-color: #F0F0F0;
+    margin: 0;
+    width: 100%;
+}
+
+#barra{
+    background-color: black;
+    height: 60px;
+    width: 100%;
+    float: left;
 
 }
 
-#principal2{
-    background-color: bisque;
-    width: 750px;
-    margin: 10px auto;
-    padding: 10px;
-    overflow: hidden; /*outra forma de corrigir aquele erro da parte de tras subir e sair de tras dp objetos*/
+img{
+    width: 95%;
+    height: 10%;
 }
 
 
-div{
+ul{
+    list-style: none;
+}
+li{
+    display: inline-block;
+    padding: 5px 10px;
+}
+li a{
+    text-decoration: none;
+    color: white;
+}
+
+#logo{
+    width: 60px;
+    height: 60px;
     float: left;
 }
 
-
-#janela1{
-    margin:20px;
-    width: 200px;
-    height: 200px;
-    background-color: blue;
+#image{
+    width: 700px;
+    margin: 0 auto;
 }
 
-#janela2{
-    margin:20px;
-    width: 200px;
-    height: 200px;
-    background-color: yellow;
+#article01{
+    background-color: bisque;
+    width: 47%;
+    padding: 10px;
+    margin: 10px;
+    float: left;
 }
 
-#janela3{
-    margin:20px;
-    width: 200px;
-    height: 200px;
-    background-color: red;
+#article02{
+    background-color: aquamarine;
+    width: 48%;
+    padding: 10px;
+    margin: 10px 0;
+    float: left;
+}
+
+footer{
+    width: 100%;
+    height: 20px;
+    background-color: silver;
+    clear: both;
+    text-align: center;
+    padding: 20px 0;
 }
