--- a/CSS/estilos/estilo07.css
+++ b/CSS/estilos/estilo07.css
@@ -33,13 +33,15 @@ section {
 
 .janela1 {
     background-color:rgb(153,204,51);
-    position: static; /*Posicionamento natural*/
-    margin-top: 20px;
-    margin-left: 20px;
+    position: relative; /*Possui a caracteristica de sobrepor elementos*/
+    top: 10px; /*Aplicavel somente a position relative*/
+    left: 10px; /*Aplicavel somente a position relative*/
 }
 
 .janela2 {
     background-color:rgb(255,204,51);
+    position: relative; /*Possui a caracteristica de sobrepor elementos*/
+
 }
 
 .janela3 {
