--- a/CSS/estilos/estilo07.css
+++ b/CSS/estilos/estilo07.css
@@ -19,31 +19,44 @@ main {
     box-shadow: 0 0 10px #666;
     margin:10px auto;
     padding:10px;
+    position: relative;
+    height: 500px;
 }
 
 #principal {
     background-color:rgb(240,240,240);
     border:1px dotted #666666;
     margin-top:20px;
+    position: relative;
+    height: 300px;
 }
 
 section {
     height:100px;width:100px;padding:10px;
+
 }
 
 .janela1 {
     background-color:rgb(153,204,51);
-    position: relative; /*Possui a caracteristica de sobrepor elementos*/
-    top: 10px; /*Aplicavel somente a position relative*/
-    left: 10px; /*Aplicavel somente a position relative*/
+    position: absolute; /*so compreende position fixed,absolutos e relativos*/
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+
 }
 
 .janela2 {
     background-color:rgb(255,204,51);
-    position: relative; /*Possui a caracteristica de sobrepor elementos*/
-
+    position: absolute; /*so compreende position fixed,absolutos e relativos*/
+    top: 20px;
+    left: 20px;
+    z-index: 3; /*quanto maior o valor mais a frente o objeto vai estar*/
 }
 
 .janela3 {
     background-color:rgb(51,153,204);
+    position: absolute; /*so compreende position fixed,absolutos e relativos*/
+    top: 30px;
+    left: 30px;
+    z-index: 1;
 }
