--- a/CSS/estilos/estilo07.css
+++ b/CSS/estilos/estilo07.css
@@ -19,16 +19,13 @@ main {
     box-shadow: 0 0 10px #666;
     margin:10px auto;
     padding:10px;
-    position: relative;
-    height: 500px;
+    height: 3000px;
 }
 
 #principal {
     background-color:rgb(240,240,240);
     border:1px dotted #666666;
     margin-top:20px;
-    position: relative;
-    height: 300px;
 }
 
 section {
@@ -38,25 +35,18 @@ section {
 
 .janela1 {
     background-color:rgb(153,204,51);
-    position: absolute; /*so compreende position fixed,absolutos e relativos*/
+    position: fixed; /*o elemento permanece fixo a tela, a compreencao de posicao e parecida com absoluto*/
     top: 10px;
-    left: 10px;
-    z-index: 2;
+    right: 10px;
 
 }
 
 .janela2 {
     background-color:rgb(255,204,51);
-    position: absolute; /*so compreende position fixed,absolutos e relativos*/
-    top: 20px;
-    left: 20px;
-    z-index: 3; /*quanto maior o valor mais a frente o objeto vai estar*/
+
 }
 
 .janela3 {
     background-color:rgb(51,153,204);
-    position: absolute; /*so compreende position fixed,absolutos e relativos*/
-    top: 30px;
-    left: 30px;
-    z-index: 1;
+
 }
