--- a/CSS/estilos/estilo07.css
+++ b/CSS/estilos/estilo07.css
@@ -19,13 +19,16 @@ main {
     box-shadow: 0 0 10px #666;
     margin:10px auto;
     padding:10px;
-    height: 3000px;
+    position: relative;
+    height: 500px;
 }
 
 #principal {
     background-color:rgb(240,240,240);
     border:1px dotted #666666;
     margin-top:20px;
+    position: relative;
+    height: 300px;
 }
 
 section {
@@ -35,18 +38,24 @@ section {
 
 .janela1 {
     background-color:rgb(153,204,51);
-    position: fixed; /*o elemento permanece fixo a tela, a compreencao de posicao e parecida com absoluto*/
+    position: absolute;
     top: 10px;
-    right: 10px;
-
+    left: 20px;
+    z-index: 6;
 }
 
 .janela2 {
     background-color:rgb(255,204,51);
-
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    z-index: 1;
 }
 
 .janela3 {
     background-color:rgb(51,153,204);
-
+    position: absolute;
+    top: 60px;
+    left: 70px;
+    z-index: 2;
 }
