--- a/CSS/estilos/estilo07.css
+++ b/CSS/estilos/estilo07.css
@@ -39,23 +39,15 @@ section {
 .janela1 {
     background-color:rgb(153,204,51);
     position: absolute;
-    top: 10px;
-    left: 20px;
-    z-index: 6;
+    top: 100px;
+    left: 40px;
+    clip: rect(0 100px 100px 0); /*dentro do rec vai o tamanho do elemento principal*/
+    /*o clipe esconde todas as parte do elemento que estejam fora das medidas*/
 }
 
 .janela2 {
     background-color:rgb(255,204,51);
     position: absolute;
-    top: 30px;
-    left: 40px;
-    z-index: 1;
-}
-
-.janela3 {
-    background-color:rgb(51,153,204);
-    position: absolute;
-    top: 60px;
-    left: 70px;
-    z-index: 2;
+    top: 50px;
+    left: 5px;
 }
