--- a/CSS/estilos/estilo07.css
+++ b/CSS/estilos/estilo07.css
@@ -38,16 +38,7 @@ section {
 
 .janela1 {
     background-color:rgb(153,204,51);
-    position: absolute;
-    top: 100px;
-    left: 40px;
-    clip: rect(0 100px 100px 0); /*dentro do rec vai o tamanho do elemento principal*/
-    /*o clipe esconde todas as parte do elemento que estejam fora das medidas*/
-}
-
-.janela2 {
-    background-color:rgb(255,204,51);
-    position: absolute;
-    top: 50px;
-    left: 5px;
+    width: 300px;
+    height: 300px;
+    overflow: auto;
 }
