--- a/CSS/estilos/estilo09.css
+++ b/CSS/estilos/estilo09.css
@@ -18,7 +18,7 @@ main{
     margin: 0 auto;
     box-shadow:silver 0 0 10px;
     background-color: white;
-    min-width: 800px;
+    min-width: 800px; /*Determina o tamanho minimo*/
 
 
 }
@@ -27,7 +27,6 @@ header{
     background-color: black;
     width: 100%;
     height: 60px;
-    min-width: 800px;
 }
 
 nav{
