--- a/CSS/estilos/estilo10.css
+++ b/CSS/estilos/estilo10.css
@@ -1,10 +1,12 @@
-ul, ol{
-    background-color: aqua;
+ol{
+    list-style-type: lower-latin;
 }
 
+ul{
+    list-style-type: circle;
+
+}
 li{
-    background-color: midnightblue;
-    color: white;
+    background-color: aliceblue;
     padding: 5px;
-    list-style-position: inside; /*coloca os elementos dentro do li*/
 }
