--- a/CSS/estilos/estilo10.css
+++ b/CSS/estilos/estilo10.css
@@ -3,25 +3,47 @@ nav ul{
     padding: 0;
     text-align: center; /*centraliza os texto*/
 }
+nav{
+    width: 600px;
+    margin: 0 auto;
+}
 
 nav ul li{
-    list-style-type: none; /*removendo o estilo de lista*/
-    display: inline-block; /*coloca um ao lado do outro e ocupando o seu proprio espaco*/
-    text-align: center; /*centraliza os texto*/
+float: left;
+    display: inline-block;
+    position: relative;
 
 }
 
 nav ul li a{
-    text-decoration: none; /*removendo o sublinhado do texto*/
-    background-color: darkslategrey;
-    color: white;
-    padding: 5px; /*espaco interno dos elementos*/
+    display: inline-block;
+    text-decoration: none;
+    color: darkslategrey;
+    background-color: #F0F0F0;
+    padding: 5px 10px;
+    border: darkslategrey 1px solid;
+    margin-right: -5px; /*coloca uma linha em cima da outra para ela nao engrossar */
     width: 100px;
-    display: inline-block; /*deixa o objeto ocupando o seu proprio espaco*/ /*Possui por padrao 3 a 4 pixels de separacao*/
-    margin-right: -2px;
+
 }
 
 nav ul li a:hover{
     background-color: darkolivegreen;
+
+}
+
+nav ul li ul {
+    display: none; /*esconde os submenus*/
+    position: absolute; /*para os itens do submenu ficarem um a baixo do outro*/
+    padding: 5px 0;
+}
+
+nav ul li:hover ul {
+    display: block; /*faz aparecer o menu*/
+}
+
+nav ul li ul li a{
+    width: 96px;
+    margin-bottom: -5px; /*coloca uma linha em cima da outra para ela nao engrossar */
 
 }
