--- a/jquery/estilos/estilo002.css
+++ b/jquery/estilos/estilo002.css
@@ -1,18 +1,34 @@
-
-#janela{
-    position: absolute;
-    top: 20px;
-    left: 50px;
-    height: 200px;
-    width: 200px;
-    background-color: darkcyan;
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+ul li{
+    list-style-type: none;
+    width: 78px;
+    height: 78px;
+    background-repeat: no-repeat;
+    background-size: 78px;
+    margin-bottom: 1px;
+    cursor: pointer; /*ao passar o mouse aparece a maozinha*/
 }
 
-#janelinha{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    height: 50px;
-    width: 50px;
+#tela1{
+    background-image: url("../../HTML/imagens/coffee_cup_icon_181496.ico") ;
+}
+
+#tela2{
+    background-image: url("../../HTML/imagens/bubble_chat_message_conversation_icon_181497.ico") ;
+}
+
+#primeira{
+    width: 300px;
+    height: 500px;
+    background-color: aqua;
+}
+
+#segunda{
+    width: 300px;
+    height: 500px;
     background-color: orangered;
 }
