--- a/jquery/estilos/estilo002.css
+++ b/jquery/estilos/estilo002.css
@@ -1,7 +1,14 @@
+html,body,main{
+    margin: 0;
+    padding: 0;
+}
+
+
 nav ul{
     margin: 0;
     padding: 0;
     list-style: none;
+    position: fixed;
 }
 ul li{
     list-style-type: none;
@@ -21,14 +28,25 @@ ul li{
     background-image: url("../../HTML/imagens/bubble_chat_message_conversation_icon_181497.ico") ;
 }
 
+#tela3{
+    background-image: url("../../HTML/imagens/hand_thumbs_up_icon_181484.ico") ;
+
+}
+
 #primeira{
     width: 300px;
-    height: 500px;
+    height: 80px;
     background-color: aqua;
 }
 
 #segunda{
     width: 300px;
-    height: 500px;
+    height: 80px;
     background-color: orangered;
+}
+
+#terceira{
+    width: 300px;
+    height: 80px;
+    background-color: midnightblue;
 }
