Enviar parâmetros para um função com evento.

--- a/jquery/estilos/estilo003.css
+++ b/jquery/estilos/estilo003.css
@@ -1,7 +1,7 @@
 #janela{
     width: 200px;
     height: 200px;
-    background-color: midnightblue;
+    background-color: transparent;
     cursor: pointer;
 }
 main{
