--- a/jquery/estilos/estilo004.css
+++ b/jquery/estilos/estilo004.css
@@ -2,13 +2,44 @@
     margin: 10px 0;
     width: 300px;
     height: 300px;
-    background-color: midnightblue;
+    background-color: chartreuse;
+    position: absolute;
+    border-radius: 80px 80px 50px 10px;
 }
 
-#janelaPrinc{
+#janela1 {
+    margin: 10px 0;
     width: 300px;
-    height: 329px;
-    text-align: center;
-    border: midnightblue 2px solid;
-    padding: 5px;
+    height: 300px;
+    background-color: green;
+    position: absolute;
+    border-radius: 200px 80px;
+
+}
+#janela2 {
+    margin: 10px 0;
+    width: 300px;
+    height: 300px;
+    background-color: aqua;
+    position: absolute;
+    border-radius: 10px 80px;
+
+}
+#janela3 {
+    margin: 10px 0;
+    width: 300px;
+    height: 300px;
+    background-color: orange;
+    position: absolute;
+    border-radius: 80px 10px;
+
+}
+#janela4 {
+    margin: 10px 0;
+    width: 300px;
+    height: 300px;
+    background-color: orangered;
+    position: absolute;
+    border-radius: 80px 80px 200px;
+
 }
