--- a/jquery/estilos/estilo004.css
+++ b/jquery/estilos/estilo004.css
@@ -1,45 +1,11 @@
-#janela {
-    margin: 10px 0;
-    width: 300px;
+#janelaPrinc {
     height: 300px;
-    background-color: chartreuse;
     position: absolute;
     border-radius: 80px 80px 50px 10px;
 }
 
-#janela1 {
-    margin: 10px 0;
-    width: 300px;
-    height: 300px;
-    background-color: green;
-    position: absolute;
-    border-radius: 200px 80px;
-
+img{
+    width: 100px;
+    height: 80px;
 }
-#janela2 {
-    margin: 10px 0;
-    width: 300px;
-    height: 300px;
-    background-color: aqua;
-    position: absolute;
-    border-radius: 10px 80px;
 
-}
-#janela3 {
-    margin: 10px 0;
-    width: 300px;
-    height: 300px;
-    background-color: orange;
-    position: absolute;
-    border-radius: 80px 10px;
-
-}
-#janela4 {
-    margin: 10px 0;
-    width: 300px;
-    height: 300px;
-    background-color: orangered;
-    position: absolute;
-    border-radius: 80px 80px 200px;
-
-}
