--- a/PHP - Banco de dados BASICO/estilos/estiloUni04.css
+++ b/PHP - Banco de dados BASICO/estilos/estiloUni04.css
@@ -86,11 +86,48 @@ header img{
 
 /* -------- Estilo Main ---------*/
 
+main .container-principal .container-listagem-item ul{
+    float: left;
+    border: 1px solid #484848;
+    width:300px;
+    height:100px
+}
+
+main .container-principal .container-listagem-item ul li{
+    list-style-type: none;
+    margin: 5px;
+    display:inline-block;
+    font-size:25px;
+}
+
+
 main .container-principal{
     width:100%;
-    height:800px;
+    height:850px;
     background-color:#cccccc;
+
 }
-main section ul li a{
-    color:black;
+
+main .container-listagem{
+    margin: 0 auto;
+    width: 800px;
+    height:850px;
+    background-color:darkblue;
+
 }
+
+main .container-listagem-item{
+    width:300px;
+    padding:10px;
+    height:730px;
+    background-color:darkviolet;
+    margin:0 auto;
+}
+
+input{
+    background-color:transparent;
+    border: none;
+    color:white;
+    font-size:25px;
+}
+
