--- a/PHP - Banco de dados BASICO/estilos/estiloUni04.css
+++ b/PHP - Banco de dados BASICO/estilos/estiloUni04.css
@@ -3,131 +3,61 @@ html,body,main{
     padding: 0;
 }
 
-/* -------- Estilo foooter ---------*/
 
-footer{
-    padding: 10px;
-    width: 100%;
-    background-color:#484848;
-    text-align: left;
-}
-footer ul li{
+/* -------- Estilo menu lateral ---------*/
+
+.container-menu-l li{
     list-style-type: none;
-    margin: 15px;
+    margin-bottom: 60px;
 }
-footer ul li a{
+.container-menu-l li a{
     text-decoration: none;
-    color:white;
+    color:#484848;
+    font-size:25px;
+
 }
-.copyright{
-    text-align: center;
-    margin:10px;
-    color:white;
-    font-size:20px;
-}
-.social-container{
-    display:grid;
-}
-.social-item{
-    grid-column-start: 1;
-}
-.social-item img{
-    width: 80px;
-    height: 80px;
-    margin-left: 50px;
-    margin-bottom: 50px;
-}
-.grid-container{
-    display:grid;
-    margin-bottom: 30px;
-}
-.grid-item1{
-    grid-column-start: 1;
-}
-.grid-item2{
-    grid-column-start: 2;
-}
-.grid-item3{
-    grid-column-start: 3;
+.container-menu-l{
+    width: 200px;
+    height:500px;
+    position: absolute;
+
 }
 
-/* -------- Estilo Header princial ---------*/
 
-header ul li{
-    list-style-type: none;
-    margin: 15px;
-    display:inline-block;
-}
-header ul li a{
-    text-decoration: none;
-    color:black;
-    font-size:25px
-}
-header img{
-    width:90px;
-    height:90px;
-}
-.container-nav{
-    display: grid;
-}
-.nav-item{
-    grid-column-start: 3;
-}
-.nav-item-logo{
-    grid-column-start:2;
+/* -------- Estilo Produtos ---------*/
+
+
+.container-principal{
+    margin:80px auto;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    width:70%;
 }
 
-@media (max-width: 720px) {
 
-    header ul li a{
-        font-size:20px
-    }
+.container-prod{
+    padding: 5px;
+    width: 350px;
+    margin:30px;
+    font-size:18px;
 }
 
-/* -------- Estilo Main ---------*/
-
-main .container-principal .container-listagem-item ul{
-    float: left;
-    border: 1px solid #484848;
+.container-prod img{
     width:300px;
-    height:100px
+    height:300px;
 }
 
-main .container-principal .container-listagem-item ul li{
+.container-principal ul li{
     list-style-type: none;
     margin: 5px;
-    display:inline-block;
-    font-size:25px;
+}
+.container-principal ul li{
+    text-decoration: none;
+    color:black;
 }
 
-
-main .container-principal{
-    width:100%;
-    height:850px;
-    background-color:#cccccc;
-
+#textPreco{
+    font-size:32px;
+    color:darkblue;
 }
-
-main .container-listagem{
-    margin: 0 auto;
-    width: 800px;
-    height:850px;
-    background-color:darkblue;
-
-}
-
-main .container-listagem-item{
-    width:300px;
-    padding:10px;
-    height:730px;
-    background-color:darkviolet;
-    margin:0 auto;
-}
-
-input{
-    background-color:transparent;
-    border: none;
-    color:white;
-    font-size:25px;
-}
-
