--- a/PHP - Banco de dados BASICO/estilos/login.css
+++ b/PHP - Banco de dados BASICO/estilos/login.css
@@ -98,3 +98,12 @@ main{
 
     }
 }
+
+
+/*----------mensagem de erro--------*/
+
+.erroLogin{
+    color:red;
+    font-size:20px;
+    margin-top: -30px;
+}
